Scroll: fixed reload on scroll bug on mobile

--- a/src/css/first_page.scss
+++ b/src/css/first_page.scss
@@ -1,10 +1,14 @@
 @import "_general.scss";
 
 body {
-	position: fixed;
+	// position: fixed;
 	width: 100%;
 	margin: 0;
 	font-family: 'Raleway', sans-serif;
+
+	&::-webkit-scrollbar { 
+		display: none; 
+	}
 }
 
 .container {
@@ -13,12 +17,12 @@ body {
 
 	transition: all 500ms ease;
 
-	@for $i from 0 to 4 {
-		.scroll-index-#{$i} & {
-			--margin-top: calc( -100vh * #{$i} );
-			margin-top: var(--margin-top);
-		}
-	}
+	// @for $i from 0 to 4 {
+	// 	.scroll-index-#{$i} & {
+	// 		--margin-top: calc( -100vh * #{$i} );
+	// 		margin-top: var(--margin-top);
+	// 	}
+	// }
 
 	.scroll-tilt-up & {
 		animation: tilt-up 500ms cubic-bezier(0,.71,.29,1.16);
